# sleap-core-docs

./: .gitignore  LICENSE  MANIFEST.in  README.md  codecov.yml  environment.yml  environment_mac.yml  environment_mac_sleap_nn.yml  environment_no_cuda.yml  environment_sleap_nn.yml  mkdocs.yml  pypi_requirements.txt  pyproject.toml  requirements.txt  setup.py
.claude/commands/: coverage.md  lint.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  build_conda_ci.yml  build_manual.yml  build_pypi_ci.yml  ci.yml  docs.yml  test_action.yml  website.yml
.github/workflows/archive/: comment-template.yml  comment.yml
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/CHANGELOG/: index.html
dev/api/: index.html
dev/api/SUMMARY/: index.html
dev/api/diagnostic/: index.html
dev/api/gui/: index.html
dev/api/info/: index.html
dev/api/io/: index.html
dev/api/legacy_cli_adaptors/: index.html
dev/api/message/: index.html
dev/api/prefs/: index.html
dev/api/rangelist/: index.html
dev/api/sleap_io_adaptors/: index.html
dev/api/util/: index.html
dev/api/version/: index.html
dev/code-of-conduct/: index.html
dev/contribute/: index.html
dev/help/: index.html
dev/how-to-guides/creating-a-custom-training-profile/: index.html
dev/how-to-guides/guides-overview/: index.html
dev/how-to-guides/importing-predictions-for-labeling/: index.html
dev/how-to-guides/run-training-and-inference-on-colab/: index.html
dev/how-to-guides/running-sleap-remotely/: index.html
dev/how-to-guides/tracking-and-proofreading/: index.html
dev/how-to-guides/using-bonsai-with-sleap/: index.html
dev/installation/: index.html
dev/learnings/configuring-models/: index.html
dev/learnings/export-analysis/: index.html
dev/learnings/gui/: index.html
dev/learnings/main-mistakes-by-tracking/: index.html
dev/learnings/prediction-assisted-labeling/: index.html
dev/learnings/skeleton-design/: index.html
dev/learnings/system-overview/: index.html
dev/learnings/training-options/: index.html
dev/learnings/troubleshoot-workflows/: index.html
dev/notebooks/Analysis_examples/: index.html
dev/notebooks/Data_structures/: index.html
dev/notebooks/Interactive_and_realtime_inference/: index.html
dev/notebooks/Interactive_and_resumable_training/: index.html
dev/notebooks/Model_evaluation/: index.html
dev/notebooks/Post_inference_tracking/: index.html
dev/overview/: index.html
dev/search/: search_index.json
dev/whats-new/: index.html
docs/: code-of-conduct.md  contribute.md  help.md  index.md  installation.md  overview.md  whats-new.md
docs/_templates/: api_head.md
docs/css/: mkdocstrings.css
docs/guides/: cli.md  colab.md  merging.md  training.md
docs/how-to-guides/: creating-a-custom-training-profile.md  guides-overview.md  importing-predictions-for-labeling.md  run-training-and-inference-on-colab.md  running-sleap-remotely.md  tracking-and-proofreading.md  using-bonsai-with-sleap.md
docs/learnings/: configuring-models.md  export-analysis.md  gui.md  main-mistakes-by-tracking.md  prediction-assisted-labeling.md  skeleton-design.md  system-overview.md  training-options.md  troubleshoot-workflows.md
docs/notebooks/: Analysis_examples.ipynb  Data_structures.ipynb  Interactive_and_realtime_inference.ipynb  Interactive_and_resumable_training.ipynb  Model_evaluation.ipynb  Post_inference_tracking.ipynb  SLEAP_Tutorial_at_Cosyne_2024_Using_exported_data.ipynb  Training_and_inference_on_an_example_dataset.ipynb  Training_and_inference_using_Google_Drive.ipynb  index.md  notebooks-overview.md  sleap_io_idtracker_IDs.ipynb
docs/reference/: command-line-interfaces.md  datasets.md  evaluation_metrics.md
docs/scripts/: gen_ref_pages.py
docs/tutorial/: correcting-predictions.md  exporting-the-results.md  i-m-done-sleaping-now-what.md  importing-data.md  initial-labeling.md  overview.md  proofreading.md  setup.md  tracking-new-data.md  training-a-model.md
docs/tutorials/: analysis.md  initial-labeling.md  initial-training.md  proofreading.md  tutorial.md
scripts/: gen_ref_pages.py
sleap/: __init__.py  diagnostic.py  instance.py  legacy_cli_adaptors.py  message.py  skeleton.py  util.py  version.py
sleap/config/: export_labels_form.yaml  pipeline_form.yaml  shortcuts.yaml  training_editor_form.yaml  video_clip_form.yaml
sleap/gui/: app.py  color.py  commands.py  config_utils.py  dataviews.py  shortcuts.py  state.py  suggestions.py  web.py
sleap/gui/dialogs/: delete.py  (+11 more)
sleap/info/: align.py  feature_suggestions.py  labels.py  metrics.py  summary.py  write_tracking_h5.py
sleap/io/: cameras.py  convert.py  dataset.py  legacy.py  video.py  videowriter.py  visuals.py
sleap/nn/: __init__.py  inference.py  tracking.py  training.py
sleap/sleap_io_adaptors/: __init__.py  instance_utils.py  lf_labels_utils.py  skeleton_utils.py  video_utils.py
sleap/training_profiles/: baseline.centroid.json  baseline_large_rf.bottomup.json  baseline_large_rf.single.json  baseline_large_rf.topdown.json  baseline_medium_rf.bottomup.json  baseline_medium_rf.single.json  baseline_medium_rf.topdown.json  pretrained.bottomup.json  pretrained.centroid.json  pretrained.single.json  pretrained.topdown.json
tests/: conftest.py  test_instance.py  test_point_array.py  test_skeleton.py  test_sleap_io_adaptor.py  test_util.py
tests/fixtures/: datasets.py  instances.py  models.py  skeletons.py  videos.py
tests/gui/: test_app.py  test_color.py  test_commands.py  test_conf_maps_view.py  test_dataviews.py  test_dialogs.py  test_formbuilder.py  test_grid_system.py  test_import.py  test_missingfiles.py  test_quiver.py  test_slider.py  test_state.py  test_suggestions.py  test_tracks.py  test_video_player.py  test_web.py
tests/info/: test_align.py  test_feature_suggestions.py  test_h5.py  test_metrics.py  test_summary.py
tests/io/: test_cameras.py  test_convert.py  test_dataset.py  test_formats.py  test_video.py  test_videowriter.py  test_visuals.py
tests/nn/: test_inference.py  test_peak_finding.py  test_tracker_components.py  test_tracking_integration.py
(+143 files in other folders)
